// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="display-flex-center"
>
  <PageShortcutsTooltip
    className="big-spacer-right"
    leftAndRightLabel="issues.to_navigate"
    upAndDownLabel="coding_rules.to_select_rules"
  />
</div>
`;

exports[`should render correctly: with paging 1`] = `
<div
  className="display-flex-center"
>
  <PageShortcutsTooltip
    className="big-spacer-right"
    leftAndRightLabel="issues.to_navigate"
    upAndDownLabel="coding_rules.to_select_rules"
  />
  <PageCounter
    className="spacer-left"
    label="coding_rules._rules"
    total={100}
  />
</div>
`;
